--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "illuminate/html": "^5.0",
         "laravel/framework": "^8.0",
+        "laravel/jetstream": "^1.6",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.4",
         "laravelcollective/html": "^6.2"
     },
     "require-dev": {
